--- a/nosotros.html
+++ b/nosotros.html
@@ -1,126 +1,55 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Productos - Vegas de Breña Alta</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Nosotros - Vegas de Breña Alta</title>
   <script src="https://cdn.tailwindcss.com"></script>
   <style>
-    * {
-      margin: 0;
-      padding: 0;
-      box-sizing: border-box;
-    }
-    html, body {
-      max-width: 100%;
-      overflow-x: hidden;
-    }
     body {
-      background-image: url('images/fondo-productos.jpg');
+      background-image: url('images/fondo-nosotros.jpg');
       background-size: cover;
-      background-position: center center;
+      background-position: center;
       background-attachment: fixed;
       background-repeat: no-repeat;
-      background-color: rgba(0, 0, 0, 0.6);
-      background-blend-mode: darken;
     }
-    @media (max-width: 640px) {
-      nav a {
-        display: block;
-        width: 100%;
-        text-align: center;
-      }
+    nav a {
+      display: inline-block;
+      min-width: 85px;
+      text-align: center;
     }
   </style>
 </head>
-<body class="text-gray-100">
-  <header class="w-full bg-black bg-opacity-60 backdrop-blur-sm fixed top-0 left-0 z-50">
-    <div class="max-w-7xl mx-auto px-4 py-4 flex flex-col sm:flex-row justify-between items-center gap-2">
-      <h1 class="text-2xl font-bold text-green-800">Vegas de Breña Alta</h1>
-      <nav class="flex flex-wrap justify-center gap-x-6 gap-y-1 text-gray-200 text-sm sm:text-base w-full text-center transition-all duration-300 ease-in-out">
+<body class="text-gray-100 min-h-screen flex flex-col">
+  <!-- Navegación -->
+  <header class="bg-black bg-opacity-60 shadow-md sticky top-0 z-50 backdrop-blur">
+    <div class="max-w-7xl mx-auto px-4 py-4 flex justify-between items-center">
+      <h1 class="text-2xl font-bold text-green-200">Vegas de Breña Alta</h1>
+      <nav class="flex space-x-4 text-gray-200" style="min-width: 360px; justify-content: center;">
         <a href="index.html" class="hover:underline">Inicio</a>
-        <a href="nosotros.html" class="hover:underline">Nosotros</a>
-        <a href="productos.html" class="text-green-700 font-semibold underline">Productos</a>
+        <a href="nosotros.html" class="text-green-300 font-semibold underline">Nosotros</a>
+        <a href="productos.html" class="hover:underline">Productos</a>
         <a href="galeria.html" class="hover:underline">Galería</a>
         <a href="contacto.html" class="hover:underline">Contacto</a>
       </nav>
     </div>
   </header>
 
-  <div class="h-24"></div>
-
-  <section class="text-center py-10 px-4">
-    <h2 class="text-3xl sm:text-4xl font-bold text-green-200 drop-shadow-md">Nuestros Tabacos Artesanales</h2>
-    <p class="text-base sm:text-lg text-gray-300 mt-2">Elige tu estilo y sabor favorito</p>
-  </section>
-
-  <main class="relative z-10 max-w-6xl mx-auto px-4 pb-12 grid sm:grid-cols-2 md:grid-cols-3 gap-6">
-    <div class="bg-black/50 backdrop-blur-sm rounded-xl shadow-xl p-6 flex flex-col items-center border border-white/10 hover:scale-105 transition-transform duration-300 ease-in-out">
-      <img src="images/tabaco-clasico.jpg" alt="Tabaco Clásico" class="rounded mb-4 shadow aspect-[4/3] object-cover w-full" />
-      <h3 class="text-base sm:text-lg md:text-xl font-semibold mb-2 text-green-100 text-center">Tabaco Clásico</h3>
-      <p class="mb-2 text-center text-sm sm:text-base text-gray-200">Suave y cremoso, con notas de cedro, café y cuero.</p>
-      <p class="text-sm sm:text-base md:text-lg font-bold text-green-400 mb-4">8,00 €</p>
-      <button class="bg-green-600 text-white px-4 py-2 rounded hover:bg-green-700 transition-all duration-200">Añadir al carrito</button>
-    </div>
-
-    <div class="bg-black/50 backdrop-blur-sm rounded-xl shadow-xl p-6 flex flex-col items-center border border-white/10 hover:scale-105 transition-transform duration-300 ease-in-out">
-      <img src="images/tabaco-robusto.jpg" alt="Tabaco Robusto" class="rounded mb-4 shadow aspect-[4/3] object-cover w-full" />
-      <h3 class="text-base sm:text-lg md:text-xl font-semibold mb-2 text-green-100 text-center">Tabaco Robusto</h3>
-      <p class="mb-2 text-center text-sm sm:text-base text-gray-200">Mezcla fuerte y sabrosa. Tabaco nicaragüense 100% orgánico. Fortaleza media.</p>
-      <p class="text-sm sm:text-base md:text-lg font-bold text-green-400 mb-4">8,90 €</p>
-      <button class="bg-green-600 text-white px-4 py-2 rounded hover:bg-green-700 transition-all duration-200">Añadir al carrito</button>
-    </div>
-
-    <div class="bg-black/50 backdrop-blur-sm rounded-xl shadow-xl p-6 flex flex-col items-center border border-white/10 hover:scale-105 transition-transform duration-300 ease-in-out">
-      <img src="images/tabaco-reserva.jpg" alt="Tabaco Reserva" class="rounded mb-4 shadow aspect-[4/3] object-cover w-full" />
-      <h3 class="text-base sm:text-lg md:text-xl font-semibold mb-2 text-green-100 text-center">Tabaco Reserva</h3>
-      <p class="mb-2 text-center text-sm sm:text-base text-gray-200">Edición especial añejada con sabores complejos. Ceniza firme y tiro limpio.</p>
-      <p class="text-sm sm:text-base md:text-lg font-bold text-green-400 mb-4">11,80 €</p>
-      <button class="bg-green-600 text-white px-4 py-2 rounded hover:bg-green-700 transition-all duration-200">Añadir al carrito</button>
-    </div>
-
-    <div class="bg-black/50 backdrop-blur-sm rounded-xl shadow-xl p-6 flex flex-col items-center border border-white/10 hover:scale-105 transition-transform duration-300 ease-in-out">
-      <img src="images/tabaco-dorado.jpg" alt="Tabaco Dorado" class="rounded mb-4 shadow aspect-[4/3] object-cover w-full" />
-      <h3 class="text-base sm:text-lg md:text-xl font-semibold mb-2 text-green-100 text-center">Tabaco Dorado</h3>
-      <p class="mb-2 text-center text-sm sm:text-base text-gray-200">Clásico cubano con cuerpo medio. Aroma persistente y sabor envolvente.</p>
-      <p class="text-sm sm:text-base md:text-lg font-bold text-green-400 mb-4">9,90 €</p>
-      <button class="bg-green-600 text-white px-4 py-2 rounded hover:bg-green-700 transition-all duration-200">Añadir al carrito</button>
-    </div>
-
-    <div class="bg-black/50 backdrop-blur-sm rounded-xl shadow-xl p-6 flex flex-col items-center border border-white/10 hover:scale-105 transition-transform duration-300 ease-in-out">
-      <img src="images/tabaco-intenso.jpg" alt="Tabaco Intenso" class="rounded mb-4 shadow aspect-[4/3] object-cover w-full" />
-      <h3 class="text-base sm:text-lg md:text-xl font-semibold mb-2 text-green-100 text-center">Tabaco Intenso</h3>
-      <p class="mb-2 text-center text-sm sm:text-base text-gray-200">Forma puntiaguda para un encendido más preciso. Sabor complejo y elegante.</p>
-      <p class="text-sm sm:text-base md:text-lg font-bold text-green-400 mb-4">10,20 €</p>
-      <button class="bg-green-600 text-white px-4 py-2 rounded hover:bg-green-700 transition-all duration-200">Añadir al carrito</button>
-    </div>
-
-    <div class="bg-black/50 backdrop-blur-sm rounded-xl shadow-xl p-6 flex flex-col items-center border border-white/10 hover:scale-105 transition-transform duration-300 ease-in-out">
-      <img src="images/tabaco-maduro.jpg" alt="Tabaco Maduro" class="rounded mb-4 shadow aspect-[4/3] object-cover w-full" />
-      <h3 class="text-base sm:text-lg md:text-xl font-semibold mb-2 text-green-100 text-center">Tabaco Maduro</h3>
-      <p class="mb-2 text-center text-sm sm:text-base text-gray-200">Formato delgado que resalta sabores y aromas. Fumada prolongada.</p>
-      <p class="text-sm sm:text-base md:text-lg font-bold text-green-400 mb-4">9,30 €</p>
-      <button class="bg-green-600 text-white px-4 py-2 rounded hover:bg-green-700 transition-all duration-200">Añadir al carrito</button>
-    </div>
-
-    <div class="bg-black/50 backdrop-blur-sm rounded-xl shadow-xl p-6 flex flex-col items-center border border-white/10 hover:scale-105 transition-transform duration-300 ease-in-out">
-      <img src="images/tabaco-reserva-premium.jpg" alt="Tabaco Premium Reserva" class="rounded mb-4 shadow aspect-[4/3] object-cover w-full" />
-      <h3 class="text-base sm:text-lg md:text-xl font-semibold mb-2 text-green-100 text-center">Tabaco Premium Reserva</h3>
-      <p class="mb-2 text-center text-sm sm:text-base text-gray-200">Tamaño clásico y balanceado. Ideal para cualquier momento del día.</p>
-      <p class="text-sm sm:text-base md:text-lg font-bold text-green-400 mb-4">8,60 €</p>
-      <button class="bg-green-600 text-white px-4 py-2 rounded hover:bg-green-700 transition-all duration-200">Añadir al carrito</button>
-    </div>
-
-    <div class="bg-black/50 backdrop-blur-sm rounded-xl shadow-xl p-6 flex flex-col items-center border border-white/10 hover:scale-105 transition-transform duration-300 ease-in-out">
-      <img src="images/tabaco-suave.jpg" alt="Tabaco Suave" class="rounded mb-4 shadow aspect-[4/3] object-cover w-full" />
-      <h3 class="text-base sm:text-lg md:text-xl font-semibold mb-2 text-green-100 text-center">Tabaco Suave</h3>
-      <p class="mb-2 text-center text-sm sm:text-base text-gray-200">Edición limitada con mezcla única. Para conocedores exigentes.</p>
-      <p class="text-sm sm:text-base md:text-lg font-bold text-green-400 mb-4">12,00 €</p>
-      <button class="bg-green-600 text-white px-4 py-2 rounded hover:bg-green-700 transition-all duration-200">Añadir al carrito</button>
-    </div>
+  <!-- Contenido -->
+  <main class="flex-grow flex items-center justify-center px-4 py-16">
+    <section class="relative z-10 max-w-4xl w-full bg-black bg-opacity-60 rounded-xl shadow-xl backdrop-blur p-8 text-center">
+      <h2 class="text-4xl font-bold text-green-200 mb-6">Nuestra Historia</h2>
+      <p class="text-lg text-gray-300 mb-4">
+        En Vegas de Breña Alta nos dedicamos a preservar la tradición del tabaco artesanal, cultivado con esmero en tierras volcánicas canarias. Nuestra pasión por el detalle y la calidad nos impulsa a ofrecer un producto único, elaborado a mano y con respeto por el legado cultural que representa.
+      </p>
+      <p class="text-lg text-gray-300">
+        Cada tabaco cuenta una historia de dedicación, conocimiento transmitido por generaciones y un amor profundo por lo auténtico. Nuestro compromiso es brindar experiencias que conecten con los sentidos y honren nuestras raíces.
+      </p>
+    </section>
   </main>
 
-  <footer class="text-center py-4 mt-12">
+  <!-- Footer -->
+  <footer class="text-center py-4 mt-auto">
     <p class="text-xs text-gray-300">&copy; 2025 Vegas de Breña Alta. Todos los derechos reservados.</p>
   </footer>
 </body>
