--- a/index.html
+++ b/index.html
@@ -11,13 +11,12 @@
     }
 
     body {
-      background-color: #000;
-    }
-
-    body, section {
+      background-image: url('images/hero-vegas.jpg');
       background-size: cover;
       background-position: center;
+      background-attachment: fixed;
       background-repeat: no-repeat;
+      background-color: black;
     }
   </style>
 </head>
@@ -37,13 +36,9 @@
     </div>
   </header>
 
-  <!-- Sección Inicio (mejorada) -->
-  <section id="inicio" class="relative min-h-screen flex items-center justify-center text-center overflow-hidden">
-    <!-- Imagen de fondo adaptativa -->
-    <img src="images/hero-vegas.jpg" alt="Fondo hero Vegas" class="absolute inset-0 w-full h-full object-cover object-center -z-10" />
-
-    <!-- Contenido encima -->
-    <div class="bg-black bg-opacity-60 backdrop-blur-md p-6 rounded-xl max-w-2xl mx-4" data-scroll>
+  <!-- Sección Inicio -->
+  <section id="inicio" class="py-24 px-4 bg-black bg-opacity-70 min-h-screen flex items-center justify-center text-center" data-scroll>
+    <div class="max-w-2xl mx-auto">
       <h2 class="text-4xl font-bold text-green-300 mb-4">Bienvenido a Vegas de Breña Alta</h2>
       <p class="text-lg text-gray-200">
         Tabaco artesanal de calidad, cultivado en las tierras volcánicas de La Palma.
@@ -52,7 +47,7 @@
   </section>
 
   <!-- Sección Nosotros -->
-  <section id="nosotros" class="py-16 px-4 bg-black bg-opacity-70" data-scroll>
+  <section id="nosotros" class="bg-black bg-opacity-70 py-16 px-4" data-scroll>
     <div class="max-w-4xl mx-auto text-center">
       <h2 class="text-3xl sm:text-4xl font-bold text-green-200 mb-6">Nuestra Historia</h2>
       <p class="text-base sm:text-lg text-gray-300 leading-relaxed text-justify">
@@ -62,7 +57,7 @@
   </section>
 
   <!-- Sección Productos -->
-  <section id="productos" class="py-16 px-4 bg-black bg-opacity-60" data-scroll>
+  <section id="productos" class="bg-black bg-opacity-70 py-16 px-4" data-scroll>
     <div class="max-w-5xl mx-auto text-center">
       <h2 class="text-3xl sm:text-4xl font-bold text-green-200 mb-6">Nuestros Productos</h2>
       <p class="text-base sm:text-lg text-gray-300 leading-relaxed">
@@ -72,7 +67,7 @@
   </section>
 
   <!-- Sección Galería -->
-  <section id="galeria" class="py-16 px-4 bg-black bg-opacity-60" data-scroll>
+  <section id="galeria" class="bg-black bg-opacity-70 py-16 px-4" data-scroll>
     <div class="max-w-5xl mx-auto text-center">
       <h2 class="text-3xl sm:text-4xl font-bold text-green-200 mb-6">Galería</h2>
       <p class="text-base sm:text-lg text-gray-300 leading-relaxed">
@@ -82,7 +77,7 @@
   </section>
 
   <!-- Sección Contacto -->
-  <section id="contacto" class="py-16 px-4 bg-black bg-opacity-60" data-scroll>
+  <section id="contacto" class="bg-black bg-opacity-70 py-16 px-4" data-scroll>
     <div class="max-w-xl mx-auto text-center">
       <h2 class="text-3xl sm:text-4xl font-bold text-green-200 mb-6">Contacto</h2>
       <p class="text-base sm:text-lg text-gray-300 mb-4">¿Quieres saber más o hacer un pedido personalizado?</p>
@@ -128,3 +123,4 @@
 
 </body>
 </html>
+
