--- a/contacto.html
+++ b/contacto.html
@@ -15,7 +15,7 @@
     }
     nav a {
       display: inline-block;
-      min-width: 75px;
+      min-width: 85px;
       text-align: center;
     }
   </style>
@@ -23,54 +23,79 @@
 <body class="text-gray-100 min-h-screen flex flex-col">
   <!-- Navegación -->
   <header class="bg-black bg-opacity-60 shadow-md sticky top-0 z-50 backdrop-blur">
-    <div class="max-w-7xl mx-auto px-4 py-4 flex flex-col sm:flex-row justify-between items-center gap-2">
-      <h1 class="text-xl sm:text-2xl font-bold text-green-200 text-center sm:text-left">Vegas de Breña Alta</h1>
-      <nav class="flex flex-wrap justify-center gap-3 text-gray-200 text-sm sm:text-base">
-        <a href="index.html" class="hover:text-green-300">Inicio</a>
-        <a href="nosotros.html" class="hover:text-green-300">Nosotros</a>
-        <a href="productos.html" class="hover:text-green-300">Productos</a>
-        <a href="galeria.html" class="hover:text-green-300">Galería</a>
+    <div class="max-w-7xl mx-auto px-4 py-4 flex flex-col md:flex-row justify-between items-center gap-2">
+      <h1 class="text-xl md:text-2xl font-bold text-green-200 text-center">Vegas de Breña Alta</h1>
+      <nav class="flex flex-wrap justify-center gap-2 text-sm md:text-base text-gray-200">
+        <a href="index.html" class="hover:underline">Inicio</a>
+        <a href="nosotros.html" class="hover:underline">Nosotros</a>
+        <a href="productos.html" class="hover:underline">Productos</a>
+        <a href="galeria.html" class="hover:underline">Galería</a>
         <a href="contacto.html" class="text-green-300 font-semibold underline">Contacto</a>
       </nav>
     </div>
   </header>
 
-  <!-- Contenido -->
-  <main class="flex-grow px-4 py-10 sm:py-16">
-    <section class="max-w-2xl mx-auto bg-black bg-opacity-70 rounded-2xl shadow-xl backdrop-blur p-5 sm:p-10">
-      <h2 class="text-2xl sm:text-4xl font-bold text-green-200 mb-6 text-center">Contáctanos</h2>
-      <form action="https://formsubmit.co/dhcanizares@gmail.com" method="POST" class="space-y-5">
-        <!-- Oculta el captcha de FormSubmit -->
-        <input type="hidden" name="_captcha" value="false" />
-        <input type="hidden" name="_next" value="gracias.html" />
+  <!-- Contenido principal -->
+  <main class="flex-grow flex items-center justify-center px-4 py-10 sm:py-14">
+    <section class="relative z-10 w-full max-w-[95%] md:max-w-2xl bg-black bg-opacity-70 rounded-2xl shadow-xl backdrop-blur p-6 sm:p-8">
+      <h2 class="text-3xl sm:text-4xl font-bold text-green-200 mb-6 text-center">Contáctanos</h2>
+      <p class="text-base sm:text-lg text-gray-300 mb-6 text-center">Puedes escribirnos, llamarnos o enviarnos un WhatsApp. Te responderemos lo antes posible.</p>
+
+      <!-- Información de contacto -->
+      <div class="space-y-3 text-sm sm:text-base text-left text-gray-200 mb-8">
+        <p><span class="text-green-400 font-semibold">📧 Email:</span> info@vegasbrena.com</p>
+        <p><span class="text-green-400 font-semibold">📞 Teléfono:</span> +34 922 123 456</p>
+        <p><span class="text-green-400 font-semibold">📍 Dirección:</span> Calle Real 12, Breña Alta, Santa Cruz de La Palma</p>
+        <p><span class="text-green-400 font-semibold">💬 WhatsApp:</span> <a href="https://wa.me/34628478904" target="_blank" class="underline hover:text-green-300">+34 628 478 904</a></p>
+        <p><span class="text-green-400 font-semibold">🕒 Horario de atención:</span> Lunes a Sábado, de 9:00 a 18:00</p>
+      </div>
+
+      <!-- Formulario -->
+      <form action="https://formsubmit.co/dhcanizares@gmail.com" method="POST" class="space-y-4">
+        <input type="hidden" name="_next" value="https://elsuavesama.github.io/vegas-de-bre-a-alta/gracias.html">
+        <input type="hidden" name="_captcha" value="false">
+        <input type="hidden" name="_subject" value="Nuevo mensaje desde la web Vegas de Breña Alta">
+        <input type="hidden" name="_autoresponse" value="Gracias por escribirnos. Te responderemos en breve.">
 
         <div>
-          <label for="nombre" class="block text-sm text-gray-300 mb-1">Nombre</label>
-          <input type="text" id="nombre" name="nombre" required class="w-full px-4 py-2 rounded-lg bg-gray-900 text-white border border-gray-600 focus:outline-none focus:ring-2 focus:ring-green-400" />
+          <label for="nombre" class="block text-sm font-semibold text-green-300 mb-1">Nombre:</label>
+          <input type="text" id="nombre" name="nombre" required class="w-full px-4 py-2 rounded-lg bg-gray-800 text-white placeholder-gray-400 focus:outline-none focus:ring-2 focus:ring-green-400" placeholder="Tu nombre completo">
         </div>
-
         <div>
-          <label for="correo" class="block text-sm text-gray-300 mb-1">Correo electrónico</label>
-          <input type="email" id="correo" name="correo" required class="w-full px-4 py-2 rounded-lg bg-gray-900 text-white border border-gray-600 focus:outline-none focus:ring-2 focus:ring-green-400" />
+          <label for="correo" class="block text-sm font-semibold text-green-300 mb-1">Correo electrónico:</label>
+          <input type="email" id="correo" name="correo" required class="w-full px-4 py-2 rounded-lg bg-gray-800 text-white placeholder-gray-400 focus:outline-none focus:ring-2 focus:ring-green-400" placeholder="tucorreo@email.com">
         </div>
-
         <div>
-          <label for="mensaje" class="block text-sm text-gray-300 mb-1">Mensaje o Pedido</label>
-          <textarea id="mensaje" name="mensaje" rows="4" required class="w-full px-4 py-2 rounded-lg bg-gray-900 text-white border border-gray-600 focus:outline-none focus:ring-2 focus:ring-green-400"></textarea>
+          <label for="mensaje" class="block text-sm font-semibold text-green-300 mb-1">Mensaje o pedido:</label>
+          <textarea id="mensaje" name="mensaje" rows="4" required class="w-full px-4 py-2 rounded-lg bg-gray-800 text-white placeholder-gray-400 focus:outline-none focus:ring-2 focus:ring-green-400" placeholder="Escribe aquí tu mensaje, comentario o pedido..."></textarea>
         </div>
-
-        <div class="text-center">
-          <button type="submit" class="bg-green-600 hover:bg-green-700 text-white font-semibold py-2 px-6 rounded-xl transition">Enviar</button>
-        </div>
+        <button type="submit" class="w-full py-2 px-4 bg-green-500 hover:bg-green-600 rounded-lg text-white font-semibold transition">Enviar mensaje</button>
       </form>
+
+      <!-- Mapa -->
+      <div class="mt-10">
+        <h3 class="text-lg font-semibold text-green-300 mb-2">¿Dónde estamos?</h3>
+        <div class="aspect-w-16 aspect-h-9 w-full rounded-lg overflow-hidden shadow-lg">
+          <iframe 
+            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3451.323097578971!2d-17.7642585!3d28.6388417!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xc6b7cc2d30b4211%3A0x2c340116cb1c8697!2sBre%C3%B1a%20Alta%2C%20Santa%20Cruz%20de%20Tenerife!5e0!3m2!1ses!2ses!4v1718562450000!5m2!1ses!2ses" 
+            width="100%" 
+            height="300" 
+            style="border:0;" 
+            allowfullscreen="" 
+            loading="lazy" 
+            referrerpolicy="no-referrer-when-downgrade">
+          </iframe>
+        </div>
+      </div>
     </section>
   </main>
 
   <!-- Footer -->
-  <footer class="text-center py-6 mt-auto">
+  <footer class="text-center py-4 mt-auto bg-black bg-opacity-60">
     <p class="text-xs text-gray-300">&copy; 2025 Vegas de Breña Alta. Todos los derechos reservados.</p>
   </footer>
 </body>
 </html>
+
 
 
